# picogpt

./: .gitignore  README.md  corpus.txt  infer.py  infer1.py  install.sh  picogpt.py  pyproject.toml  requirements.txt  rotarygpt.py  show.sh  train.py  train1.py  triples.tsv
src/picogpt/: __init__.py  model.py  picogpt.py
